--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 				<div id="right"></div>
 			</div>
 			<div id="insideloader">
-				<video autoplay muted src="./loaderrr.mp4"></video>
+				<!-- <video autoplay muted src="./loaderrr.mp4"></video> -->
+				<img src="img/demo1/runway-logo-removebg-preview.png" alt="">
 				<div id="line">
 					<div id="progress"></div>
 				</div>
