--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                     <h4>Explore Features</h4>
                 </div>
                 <div class="bottom-part">
-                    <button>Book Demo</button>
+                    <button>View more</button>
                 </div>
             </div>
          </div>
